updated old projects

--- a/small/CMakeLists.txt
+++ b/small/CMakeLists.txt
@@ -6,6 +6,17 @@ add_library(ideps INTERFACE)
 
 target_link_libraries(ideps INTERFACE SDL3::SDL3)
 
+add_executable(SAT SAT.cpp)
+target_link_libraries(SAT PRIVATE ideps)
+
+add_executable(raycasting raycasting.cpp)
+target_link_libraries(raycasting PRIVATE ideps)
+
+add_executable(pong2d pong2d.cpp)
+target_link_libraries(pong2d PRIVATE ideps)
+
+add_executable(tetris tetris.cpp)
+target_link_libraries(tetris PRIVATE ideps)
 
 add_executable(archimedes archimedes.cpp)
 target_link_libraries(archimedes PRIVATE ideps)
